force-app/main/default/objects/sumoapp__Process__c/sumoapp__Process__c.object-meta.xml
<CustomObject>
    <label>SUMO Scheduling Process</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Scheduling Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Scheduling Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>