force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AccountMatchingField__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AccountMatchingField__c</fullName>
    <label>Account Matching Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>