force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AccountsMatchOnlySumoRecords__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AccountsMatchOnlySumoRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounts Match Only SUMO Records</label>
    <type>Checkbox</type>
</CustomField>