force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AccountTypeOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AccountTypeOptions__c</fullName>
    <label>Account Type Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MATCH_PERSON_ACCOUNT</fullName>
                <default>true</default>
                <label>Match Person Account on the following field</label>
            </value>
            <value>
                <fullName>MATCH_PERSON_ACCOUNT_RULES</fullName>
                <label>Match Person Account by Salesforce Duplicate Rules</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>