force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ActivateCoHost__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ActivateCoHost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co Host</label>
    <type>Checkbox</type>
</CustomField>