force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ActivateNoHost__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ActivateNoHost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Host</label>
    <type>Checkbox</type>
</CustomField>