force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ActivateUrlEncryption__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ActivateUrlEncryption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encrypt URLs</label>
    <type>Checkbox</type>
</CustomField>