force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AdditionalSettings__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AdditionalSettings__c</fullName>
    <label>Additional Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RESOURCE_POOL</fullName>
                <default>true</default>
                <label>Resource Pool</label>
            </value>
            <value>
                <fullName>USER_CHOOSE</fullName>
                <label>Let User Choose</label>
            </value>
            <value>
                <fullName>DISPLAY_ERROR</fullName>
                <label>Display Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>