force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AdvanceBookingPeriod__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AdvanceBookingPeriod__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Advance Booking Period (hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>