force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AllowClientProvideHisDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AllowClientProvideHisDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Client Provide His Details</label>
    <type>Checkbox</type>
</CustomField>