force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AppointmentBookedCustomerEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentBookedCustomerEmailTemplate__c</fullName>
    <label>Appointment Booked Email (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>