force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AppointmentBookedSumoUserEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentBookedSumoUserEmailTemplate__c</fullName>
    <label>Appointment Booked Email (SUMO User)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>