force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AppointmentCanceledEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentCanceledEmailTemplate__c</fullName>
    <label>Appointment Canceled Email Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>