force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AppointmentReminderCustomerEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentReminderCustomerEmailTemplate__c</fullName>
    <label>Appointment Reminder Template (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>