force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AppointmentReminderEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentReminderEmailTemplate__c</fullName>
    <label>Appointment Reminder Template (Host)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>