force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AppointmentUpdateCustomerSFEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentUpdateCustomerSFEmailTemplate__c</fullName>
    <label>Appointment Updated Email (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>