force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ApptCanceledCustomerSFEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ApptCanceledCustomerSFEmailTemplate__c</fullName>
    <label>Appointment Canceled Email (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>