force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ApptEventCanceledSumoUserSFEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ApptEventCanceledSumoUserSFEmailTemplate__c</fullName>
    <label>Appointment Canceled Email(SUMO User)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>