force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ApptEventReminderSumoUserSFEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ApptEventReminderSumoUserSFEmailTemplate__c</fullName>
    <label>Appointment Reminder Email (SUMO User)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>