force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ApptEventUpdateSumoUserSFEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ApptEventUpdateSumoUserSFEmailTemplate__c</fullName>
    <label>Appointment Updated Email (SUMO User)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>