force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AssignmentEngineMode__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AssignmentEngineMode__c</fullName>
    <label>Assignment Engine Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOAD_BALANCE</fullName>
                <default>true</default>
                <label>Load-Balance</label>
            </value>
            <value>
                <fullName>ROUND_ROBIN</fullName>
                <label>Round-Robin</label>
            </value>
            <value>
                <fullName>RANDOM</fullName>
                <label>Random</label>
            </value>
            <value>
                <fullName>PRIORITY_BASED</fullName>
                <label>Priority Based</label>
            </value>
            <value>
                <fullName>USER_CHOOSE</fullName>
                <label>User Choose</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>