force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AutoChangeCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AutoChangeCaseOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Change Case Owner</label>
    <type>Checkbox</type>
</CustomField>