force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AvailabilityOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AvailabilityOptions__c</fullName>
    <label>Availability Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
                <label>Custom</label>
            </value>
            <value>
                <fullName>ROLLING_WINDOW</fullName>
                <label>Rolling Window</label>
            </value>
            <value>
                <fullName>DATE_RANGE</fullName>
                <label>Date Range</label>
            </value>
            <value>
                <fullName>TRAVEL_TIME_GAP</fullName>
                <label>Buffer Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>