force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__AvailableTimezones__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AvailableTimezones__c</fullName>
    <label>Available Timezones</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>