force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BackgroundImage__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BackgroundImage__c</fullName>
    <label>Background Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>