force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BasicCss__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BasicCss__c</fullName>
    <defaultValue>&apos;{&quot;primaryColor&quot;:&quot;#4A90E2&quot;,&quot;buttonsColor&quot;:&quot;#4A90E3&quot;,&quot;backgroundColor&quot;:&quot;#EAEAEA&quot;,&quot;headerColor&quot;:&quot;#4A90E2&quot;,&quot;subHeaderColor&quot;:&quot;#4A90E2&quot;,&quot;mainTextColor&quot;:&quot;#9B9B9B&quot;,&quot;headerFont&quot;:&quot;Salesforce Sans&quot;,&quot;subHeaderFont&quot;:&quot;Salesforce Sans&quot;,&quot;mainTextFont&quot;:&quot;Salesforce Sans&quot;,&quot;primaryColorLighter&quot;:&quot;#59adff&quot;,&quot;buttonsColorDarker&quot;:&quot;#3b73b6&quot;}&apos;</defaultValue>
    <label>Basic CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>