force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Blacklist__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Blacklist__c</fullName>
    <label>Blacklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>