force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BlacklistMessage__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BlacklistMessage__c</fullName>
    <label>Blacklist Message</label>
    <type>TextArea</type>
</CustomField>