force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedConfirmationNum__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedConfirmationNum__c</fullName>
    <label>Booked Confirmation #</label>
    <type>TextArea</type>
</CustomField>