force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedDateTimeLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedDateTimeLabel__c</fullName>
    <label>Booked Date/Time Label</label>
    <type>TextArea</type>
</CustomField>