force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedLocationDetailsLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedLocationDetailsLabel__c</fullName>
    <label>Booked Location Details Label</label>
    <type>TextArea</type>
</CustomField>