force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedLocationLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedLocationLabel__c</fullName>
    <label>Booked Location Label</label>
    <type>TextArea</type>
</CustomField>