force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedNameLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedNameLabel__c</fullName>
    <label>Booked Name Label</label>
    <type>TextArea</type>
</CustomField>