force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedPaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedPaymentReceived__c</fullName>
    <label>Booked Payment Received</label>
    <type>TextArea</type>
</CustomField>