force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedRegistrationComplited__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedRegistrationComplited__c</fullName>
    <label>Booked Registration Complited</label>
    <type>TextArea</type>
</CustomField>