force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedRichText__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedRichText__c</fullName>
    <label>Booked Rich Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>