force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedSubHeader__c</fullName>
    <label>Booked Sub-Header</label>
    <type>TextArea</type>
</CustomField>