force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__BookedWhenLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedWhenLabel__c</fullName>
    <label>Booked When</label>
    <type>TextArea</type>
</CustomField>