force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__CalendarType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__CalendarType__c</fullName>
    <label>Calendar Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAY_VIEW</fullName>
                <default>true</default>
                <label>Day View</label>
            </value>
            <value>
                <fullName>WEEK_VIEW</fullName>
                <label>Week View</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>