force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__CancelFromReminder__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__CancelFromReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel From Email Reminder</label>
    <type>Checkbox</type>
</CustomField>