force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Captcha__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Captcha__c</fullName>
    <label>Captcha</label>
    <type>TextArea</type>
</CustomField>