force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__CategorySubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__CategorySubHeader__c</fullName>
    <label>Category Sub-Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>