force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ContactFormFields__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ContactFormFields__c</fullName>
    <label>Contact Form Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>