force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ContactMatchingField__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ContactMatchingField__c</fullName>
    <label>Contact Matching Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>