force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ContactsMatchOnlySumoRecords__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ContactsMatchOnlySumoRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacts Match Only on SUMO Records</label>
    <type>Checkbox</type>
</CustomField>