force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ContactSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ContactSubHeader__c</fullName>
    <label>Contact Sub-Header</label>
    <type>TextArea</type>
</CustomField>