force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ContactTypeOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ContactTypeOptions__c</fullName>
    <label>Contact Type Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MATCH_CONTACT</fullName>
                <default>true</default>
                <label>Match Contact on the following field</label>
            </value>
            <value>
                <fullName>MATCH_CONTACT_RULES</fullName>
                <label>Match Contact by Salesforce Duplicate Rules</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>