force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DaysBeforeDefaultExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DaysBeforeDefaultExpirationDate__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Days Before Default Expiration Date</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>