force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DeclinedConfirmationNumberLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedConfirmationNumberLabel__c</fullName>
    <label>Declined Confirmation #</label>
    <type>TextArea</type>
</CustomField>