force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DeclinedLocationDetailsLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedLocationDetailsLabel__c</fullName>
    <label>Declined Location Details Label</label>
    <type>TextArea</type>
</CustomField>