force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DeclinedLocationLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedLocationLabel__c</fullName>
    <label>Declined Location Label</label>
    <type>TextArea</type>
</CustomField>