force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DeclinedNameLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedNameLabel__c</fullName>
    <label>Declined Name Label</label>
    <type>TextArea</type>
</CustomField>