force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DeclinedSubHeaderLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedSubHeaderLabel__c</fullName>
    <label>Declined Sub-Header</label>
    <type>TextArea</type>
</CustomField>