force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DeclinedWhenLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DeclinedWhenLabel__c</fullName>
    <label>Declined When</label>
    <type>TextArea</type>
</CustomField>