force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DefaultCategory__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DefaultCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Category</label>
    <referenceTo>sumoapp__Category__c</referenceTo>
    <relationshipLabel>Default Categories</relationshipLabel>
    <relationshipName>DefaultCategories</relationshipName>
    <type>Lookup</type>
</CustomField>