force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DefaultCreateMatch__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DefaultCreateMatch__c</fullName>
    <label>Default Create/Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LEADS</fullName>
                <label>Leads</label>
            </value>
            <value>
                <fullName>BUSINESS_CONTACTS</fullName>
                <label>Contacts</label>
            </value>
            <value>
                <fullName>PERSON_ACCOUNTS</fullName>
                <label>Accounts</label>
            </value>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Lead</fullName>
                <isActive>false</isActive>
                <label>Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>