force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DefaultLocationOption__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DefaultLocationOption__c</fullName>
    <label>Default Location Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>VID_CONFERENCE</fullName>
                <label>Video Conference</label>
            </value>
            <value>
                <fullName>IN_PERSON</fullName>
                <label>In Person</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>