force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DefaultService__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DefaultService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Service</label>
    <referenceTo>sumoapp__Service__c</referenceTo>
    <relationshipLabel>Default Services</relationshipLabel>
    <relationshipName>DefaultServices</relationshipName>
    <type>Lookup</type>
</CustomField>