force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DefaultSumoUser__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DefaultSumoUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default SUMO User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Default Sumo Users</relationshipLabel>
    <relationshipName>DefaultSumoUsers</relationshipName>
    <type>Lookup</type>
</CustomField>