force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DefaultTimezone__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DefaultTimezone__c</fullName>
    <label>Default Timezone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>