force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DirectionsLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DirectionsLabel__c</fullName>
    <label>Directions Label</label>
    <type>TextArea</type>
</CustomField>