force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DisclaimerText__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DisclaimerText__c</fullName>
    <label>Disclaimer Text</label>
    <type>TextArea</type>
</CustomField>