force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DisclaimerTextArea__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DisclaimerTextArea__c</fullName>
    <label>Disclaimer Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>