force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__DisplayErrorCustomMessage__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DisplayErrorCustomMessage__c</fullName>
    <label>Display Error Custom Message</label>
    <type>TextArea</type>
</CustomField>