force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDDateTimeLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDDateTimeLabel__c</fullName>
    <label>Event Detail Date/Time Label</label>
    <type>TextArea</type>
</CustomField>