force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDDescriptionLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDDescriptionLabel__c</fullName>
    <label>Event Detail Description Label</label>
    <type>TextArea</type>
</CustomField>