force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDLocationDetailsLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDLocationDetailsLabel__c</fullName>
    <label>Event Detail Location Details Label</label>
    <type>TextArea</type>
</CustomField>