force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDLocationsLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDLocationsLabel__c</fullName>
    <label>Event Detail Locations Label</label>
    <type>TextArea</type>
</CustomField>