force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDNumOfSeatsLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDNumOfSeatsLabel__c</fullName>
    <label>Event Detail # of seats Label</label>
    <type>TextArea</type>
</CustomField>