force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDPriceLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDPriceLabel__c</fullName>
    <label>Event Detail Price Label</label>
    <type>TextArea</type>
</CustomField>