force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDSpacesLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDSpacesLabel__c</fullName>
    <label>Event Detail Spaces Label</label>
    <type>TextArea</type>
</CustomField>