force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EDSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EDSubHeader__c</fullName>
    <label>Event Detail Sub Header</label>
    <type>TextArea</type>
</CustomField>