force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EmbedCodeInBody__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EmbedCodeInBody__c</fullName>
    <label>Embed Code in Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>