force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EmbedCodeInHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EmbedCodeInHeader__c</fullName>
    <label>Embed Code in Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>