force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EnablePersonalAccount__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EnablePersonalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Personal Account</label>
    <type>Checkbox</type>
</CustomField>