force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventCanceledCustomerEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventCanceledCustomerEmailTemplate__c</fullName>
    <label>Event Canceled Template (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>