force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventDeclinedCustomerEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventDeclinedCustomerEmailTemplate__c</fullName>
    <label>Event Declined Template (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>