force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventEditPageCustomFields__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventEditPageCustomFields__c</fullName>
    <label>Event Edit Page Custom Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>