force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventTypes__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventTypes__c</fullName>
    <label>Event Types</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>