force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventUpdatedCustomerEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventUpdatedCustomerEmailTemplate__c</fullName>
    <label>Event Updated Template (Customer)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>