force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventUpdatedSumoUserEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventUpdatedSumoUserEmailTemplate__c</fullName>
    <label>Event Updated Template (Host)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>