force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__EventViewPageCustomFields__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventViewPageCustomFields__c</fullName>
    <label>Event View Page Custom Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>