force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__FooterTextArea__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FooterTextArea__c</fullName>
    <defaultValue>&apos;Powered by &lt;a href=&quot;https://www.sumoscheduler.com/&quot; target=&quot;_blank&quot;&gt;SumoScheduler.com&lt;/a&gt;&apos;</defaultValue>
    <label>Footer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>