force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__FurthestBookingPeriod__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FurthestBookingPeriod__c</fullName>
    <defaultValue>720</defaultValue>
    <label>Furthest Booking Period (hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>