force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__GlobalHeaderLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__GlobalHeaderLabel__c</fullName>
    <label>Global Header Label</label>
    <type>TextArea</type>
</CustomField>