force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__HideInternalEmailsByDefault__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__HideInternalEmailsByDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls default value of ShowInternalEmails__c field on Sumo Event and Invite</description>
    <label>Disable Show Internal Emails By Default</label>
    <type>Checkbox</type>
</CustomField>