force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__HideSlotWhenContactBooked__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__HideSlotWhenContactBooked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Appointment Slot</label>
    <type>Checkbox</type>
</CustomField>