force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IfContactIdIsPassed__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IfContactIdIsPassed__c</fullName>
    <label>If CONTACT ID is passed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKIP_CONTACT_PAGE</fullName>
                <default>true</default>
                <label>Skip the Contact Page</label>
            </value>
            <value>
                <fullName>PRE_POPULATE_PAGE</fullName>
                <label>Pre-Populate the Page</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>