force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IfLeadIdIsPassed__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IfLeadIdIsPassed__c</fullName>
    <label>If LEAD ID is passed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKIP_LEAD_FORM</fullName>
                <default>true</default>
                <label>Skip the Lead Form - Skip the Lead Form when a Lead ID is passed in the URL.</label>
            </value>
            <value>
                <fullName>PREPOPULATE_LEAD_FORM</fullName>
                <label>Prepopulate the Lead Form - Pre-Populate the Lead Form when a Lead ID is passed in the URL and update the lead with any changes made in the lead form data.</label>
            </value>
            <value>
                <fullName>PREPOPULATE_READ_ONLY</fullName>
                <label>Prepopulate Read-Only - Pre-Populate the Lead Form when a Lead ID is passed in the URL, but make it read-only, so the user can not make any changes.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>