force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IfLeadIsConverted__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IfLeadIsConverted__c</fullName>
    <label>If LEAD is converted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCHEDULE_CONTACT</fullName>
                <default>true</default>
                <label>Schedule Contact - Self-Schedule Against the Contact that Resulted from the Converted Lead.</label>
            </value>
            <value>
                <fullName>CREATE_NEW_LEAD</fullName>
                <label>Create New Lead - Display the Lead Form, create a New Lead, and Self-Schedule Against the New Lead.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>