force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IncludeLinkInAppointmentDescription__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IncludeLinkInAppointmentDescription__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reschedule from Appointment Description</label>
    <type>Checkbox</type>
</CustomField>