force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IncludeLinkInEmailReminders__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IncludeLinkInEmailReminders__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reschedule from Email Reminder</label>
    <type>Checkbox</type>
</CustomField>